Set legend font size correct and align it

--- a/styles.css
+++ b/styles.css
@@ -83,5 +83,12 @@ img[alt="Odin-logo"] {
     margin: 0;
     border: 0;
     padding: 0;
-    
+
+}
+
+.legend {
+    font-family: var(--default-font);
+    font-size: 2em;
+    margin-left: 50px;
+    padding-top: 30px;
 }
